# manhua-matchmaker

./: README.md  main.py  pyproject.toml
.github/workflows/: daily_update.yml  weekly_update.yml
data/processed/: manhua.index  merged_manhua.json  recommender.pkl
data/raw/: anilist_manhua.json  mangadex_manhua.json  mangadex_manhua.json.tmp
src/app/: main.py  utils.py
src/data_collectors/: anilist_client.py  data_processor.py  mangadex_client.py
src/models/: recommender.py
